[tool.poetry]
name = "UliPlot"
version = "0.2.3"
description = "Utilities for convenient plotting using matplotlib and other pydata libraries"
authors = ["Uli Köhler <ukoehler@techoverflow.net>"]
license = "Apache License v2.0"
readme = "README.md"
packages = [
    { include = "UliPlot" },
]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.3"
uliengineering = "^0.4.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
